--- a/web-gateway/src/main/twirl/login.scala.html
+++ b/web-gateway/src/main/twirl/login.scala.html
@@ -1,4 +1,4 @@
-@import com.github.romastyi.UserModel
+@import com.github.romastyi.api.domain.UserModel
 @(form: Form[Option[UserModel]])(implicit flash: Flash)
 <!DOCTYPE html>
 
